# CastlevaniaVB

./: .gitignore  .project  CMakeLists.txt  CastlevaniaVB.cbp  CastlevaniaVB.layout  Micetopia.code-workspace  README.md  micetopia.cbp  micetopia.cscope_file_list  micetopia.layout
development/: pal.txt
development/CVB_resource/: richter-belmont__.ase
development/maps/: Stage1-1_bg.pmp  Stage1-1_bg_brushes.pmp  Stage1-1_fg.pmp  cave.ldtk  stage1.ldtk  tileset.ldtk
development/maps/.tilesets/: cave_pal_1.pal
development/maps/cave/simplified/level_0/: collisions.csv  data.json
development/maps/cave/simplified/level_1/: collisions.csv  data.json
development/maps/cave/simplified/level_2/: collisions.csv  data.json
development/maps/cave/simplified/level_3/: collisions.csv  data.json
development/maps/cave/simplified/level_4/: collisions.csv  (+1 more)
development/maps/cave/tiled/: 0001_level_1.tmx  0002_level_2.tmx  0003_level_3.tmx  0004_level_0.tmx  0005_level_4.tmx  cave.world
development/maps/stage1/tiled/: 0001_level_1.tmx  0002_level_2.tmx  stage1.world
inc/: camera.h  chars.h  colchar.h  collision.h  colmap.h  debug.h  defs.h  entities.h  gfx.h  global.h  hud.h  input.h  level.h  lvl_gen.h  obj_debug.h  physics.h  player.h  tile.h  types.h
res/: sounds.h  sounds.res  sprites.h  sprites.res  tilemaps.h  tilemaps.res
res/entities/: horses.aseprite  horses.pal  lantern.ase
res/levels/: RebuildLevelsData.py
res/levels/level_0/: objects.tmx
res/levels/level_1/: objects.tmx
res/levels/level_2/: objects.tmx
res/levels/level_3/: objects.tmx
res/levels/level_4/: objects.tmx
res/sound/: Castlevania Dracula X - Bloodlines.vgm
src/: camera.c  chars.c  colchar.c  collision.c  colmap.c  debug.c  entities.c  gfx.c  global.c  hud.c  input.c  level.c  lvl_gen.c  main.c  obj_debug.c  physics.c  player.c  tile.c  types.c
src/pfsm/: fsm.c  fsm.h  state.c  state.h
src/pfsm/states/: air_attack.c  air_attack.h  attack.c  attack.h  fall.c  fall.h  idle.c  idle.h  jump.c  jump.h  walk.c  walk.h
(+9 files in other folders)
